--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jeonhun6084.github.io/movieSite"
+  "homepage": "https://jeonhun6084.github.io/panpages"
 }
